# lite

./: .gitignore  README.md  build.sh  dub.json  dub.sdl  lite  meson.build
data/core/: init.lua  statusview.lua
local_include/: stddef.h
scripts/: build_clibs.sh  copy_dir.py
source/: app.d  lua.d  rencache.d  renderer.d  sdl3.d  stb_truetype.d
source/api/: api.d  package.d  renderer.d  renderer_font.d  system.d
source/lib/stb/: stb_truetype.i
src/: main.c  rencache.c  renderer.c
src/api/: system.c
